--- a/main.html
+++ b/main.html
@@ -3,9 +3,11 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+	<div>
+		<p>MY Current Favourite Song is [wap]</p>
+		<li><a href="https://www.youtube.com/watch?v=hsm4poTWjMs"></a></li>
+	</div>
 </head>
-
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
